@@ -5,7 +5,7 @@ requires "Exporter" => "0";
 requires "File::Find" => "0";
 requires "File::Spec" => "0";
 requires "Import::Into" => "0";
-requires "JSON" => "0";
+requires "JSON::MaybeXS" => "1.003003";
 requires "List::SomeUtils" => "0";
 requires "List::Util" => "0";
 requires "Module::Runtime" => "0";
