@@ -2,6 +2,8 @@ Revision history for Perl distribution Test-Class-Moose
 
 {{$NEXT}}
 
+  * converted uses of JSON.pm to JSON::MaybeXS
+
 0.95     2018-11-03
 
   [ENHANCEMENTS]
